[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/game/player.tex" type="Texture" id=2]
[ext_resource path="res://assets/game/explosion_particle.png" type="Texture" id=3]
[ext_resource path="res://assets/sound/cant_shoot.wav" type="Sample" id=4]
[ext_resource path="res://assets/sound/player_explode.wav" type="Sample" id=5]
[ext_resource path="res://assets/sound/player_hit.wav" type="Sample" id=6]
[ext_resource path="res://assets/sound/shoot.wav" type="Sample" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 20.0

[sub_resource type="Animation" id=2]

resource/name = "destroyed"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("death_particles:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/self_opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("death_particles:visibility/self_opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.5, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "invulnerable"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="SampleLibrary" id=4]

samples/cant_shoot = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/player_explode = {
"db": -6.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/player_hit = {
"db": -0.5,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/shoot = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[node name="player" type="Area2D"]

z/z = 1
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
max_health = 100
damage = 7
regen_cooldown = 3.0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="death_particles" type="Particles2D" parent="."]

z/z = -1
config/amount = 32
config/lifetime = 1.0
config/time_scale = 1.25
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.25
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 250.0
params/spin_velocity = 2.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 50.0
params/initial_angle = 1.0
params/initial_size = 1.5
params/final_size = 0.5
params/hue_variation = 1.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5
randomness/spin_velocity = 1.0
randomness/damping = 0.5
randomness/initial_angle = 2.0
randomness/initial_size = 0.7
randomness/final_size = 0.5
randomness/hue_variation = 1.0
color/color = Color( 0.667969, 0, 0, 1 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/destroyed = SubResource( 2 )
anims/invulnerable = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 4
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="invul_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="hit_particles" type="Particles2D" parent="."]

config/amount = 10
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 150.0
params/spin_velocity = 1.5
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 100.0
params/initial_angle = 1.0
params/initial_size = 13.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5
randomness/initial_angle = 1.0
randomness/initial_size = 0.5
randomness/hue_variation = 1.0
color/color = Color( 0.628906, 0.0122833, 0.0122833, 1 )

[node name="death_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[connection signal="timeout" from="invul_timer" to="." method="_on_invul_timer_timeout"]

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]


